added abilities, standard login / register. Edition and destruction is restricted to author and admins

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,12 @@
+
 <%= form_for(Tip.new) do |f| %>
   <div class="field">
     <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.text_area :body , :rows => "3" %>
   </div>
 
-  <div class="field">
-    <%= f.label :tag %><br />
-    <%= f.text_field :tag %>
-  </div>
-  <div class="field">
-    <%= f.label :date %><br />
-    <%= f.text_field :date %>
-  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => "btn" %>
   </div>
   <% end %> 
 <h1>Listing tips</h1>
@@ -30,6 +23,7 @@
   </tr>
 
 <% @tips.each do |tip| %>
+
   <tr>
     <td><%= tip.id %></td>
     <td><%= tip.body %></td>
@@ -39,10 +33,10 @@
     <td><%= link_to 'Edit', edit_tip_path(tip) %></td>
     <td><%= link_to 'Destroy', tip, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
+  user :<%= tip.user %>
 <% end %>
 </table>
 
 <br />
 
 <%= link_to 'New Tip', new_tip_path %>
-<input type="button" value="Click me" class="btn primary">
