--- a/app/views/tips/show.html.erb
+++ b/app/views/tips/show.html.erb
@@ -31,5 +31,12 @@
 </p>
 
 
+<% if !current_user == @tip.user %>
+hey
+<% end %>
 <%= link_to 'Edit', edit_tip_path(@tip) %> |
 <%= link_to 'Back', tips_path %>
+
+cuserid:<%= current_user.id %>
+cuser:<%= current_user %>
+tipuser:<%= @tip.user %>
