--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,24 +21,35 @@
       </a>
  
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <a class="brand" href="#">Project</a>
+      <!-- <a class="brand" href="#">Project</a> -->
+      <%= link_to "Project", root_path, :class => 'brand' %>
+
  <ul class="nav">
   <li class="active">
     <a href="#">Home</a>
   </li>
   <li><a href="#">Two</a></li>
   <li><a href="#">Three</a></li>
+ 
+  
 </ul>
+<% if user_signed_in? %>
 <div class="btn-group pull-right">
-  <button class="btn">Username</button>
+  <button class="btn"><%= current_user.name %></button>
   <button class="btn dropdown-toggle" data-toggle="dropdown">
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu">
-   	<li><a href="#">Edit Account</a>
-    <li><a href="#">Logout</a>
+      <%= link_to('Edit account', edit_user_registration_path) %>
+      <%= link_to('Logout', destroy_user_session_path, :method=>'delete') %>
   </ul>
 </div>
+<% else %>
+	<div class="pull-right">
+    <%= link_to('Login', new_user_session_path, :class => 'btn' )  %>  
+    <%= link_to('Sign up', new_user_registration_path, :class => 'btn') %>
+	</div>
+<% end %>
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse">
 
