--- a/app/views/tips/_form.html.erb
+++ b/app/views/tips/_form.html.erb
@@ -22,6 +22,11 @@
     <%= f.label :date %><br />
     <%= f.text_field :date %>
   </div>
+  <div class="field">
+    <%= f.label :plus %><br />
+    <%= f.text_field :plus %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
