--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	  <div class="container" style="margin-top:25px;">
+	  <div class="container" style="margin-top:25px;" class="span4">
 
 <div class="navbar">
   <div class="navbar-inner">
